--- a/urunler.html
+++ b/urunler.html
@@ -21,14 +21,33 @@
 
     <div class="main">
       <h1>Ürünlerimiz</h1>
-      <p>Orta alanda içeriklerim değişecek.</p>
+      <div class="urunler">
+            <div class="urun">
+                <img src="bardak.jpg" alt="Ürün 1">
+                <h3>Ürün 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, quos.</p>
+            </div>
+
+            <div class="urun">
+                <img src="bardak 2.jpg" alt="Ürün 2">
+                <h3>Ürün 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, quos.</p>
+            </div>
+
+            <div class="urun">
+                <img src="bardak.jpg" alt="Ürün 3">
+                <h3>Ürün 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, quos.</p>
+            </div>
+       </div>
+      <!-- <p>Orta alanda içeriklerim değişecek.</p>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, saepe
         minima qui aliquam provident deleniti ab optio magnam ducimus quam
         officiis sapiente quaerat ullam perspiciatis! Saepe a quibusdam
         reiciendis sapiente tenetur est nihil eum nobis! Atque, illum ducimus
         praesentium ipsum id quos velit odio neque a unde qui nemo hic.
-      </p>
+      </p> -->
     </div>
 
     <div class="footer">
